--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="BlueEditText" parent="Theme.GastoViagem">
+        <item name="android:colorAccent">@color/purple_700</item>
+        <item name="colorControlHighlight">@color/purple_700</item>
+        <item name="colorControlNormal">@color/purple_700</item>
+        <item name="colorControlActivated">@color/purple_700</item>
+    </style>
+
+
 </resources>
