--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,14 @@
 
 
     <EditText
+        android:id="@+id/etDistance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="@string/distance" />
+        android:hint="@string/distance"
+        android:autofillHints="@string/distance"
+        android:theme="@style/BlueEditText"
+        android:inputType="numberDecimal"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -26,7 +30,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:hint="@string/price" />
+        android:hint="@string/price"
+        android:autofillHints="@string/price"
+        android:inputType="numberDecimal" />
 
     <TextView
         android:layout_width="match_parent"
@@ -39,7 +45,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:hint="@string/autonomy" />
+        android:hint="@string/autonomy"
+        android:inputType="numberDecimal"
+        android:autofillHints="@string/autonomy" />
 
     <TextView
         android:layout_width="match_parent"
