--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,52 +7,41 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-
     <EditText
         android:id="@+id/etDistance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/EditText"
         android:layout_marginTop="16dp"
-        android:hint="@string/distance"
         android:autofillHints="@string/distance"
-        android:theme="@style/BlueEditText"
-        android:inputType="numberDecimal"/>
+        android:hint="@string/distance"
+        android:inputType="numberDecimal"
+        android:theme="@style/theme.EditText" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
+        style="@style/textViewSubtitle"
         android:text="@string/total_Km" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:hint="@string/price"
+        android:id="@+id/etPrice"
+        style="@style/EditText"
         android:autofillHints="@string/price"
-        android:inputType="numberDecimal" />
+        android:hint="@string/price"
+        android:inputType="numberDecimal"
+        android:theme="@style/theme.EditText" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
+        style="@style/textViewSubtitle"
         android:text="@string/price_Per_Liter" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:id="@+id/etAutonomy"
+        style="@style/EditText"
+        android:autofillHints="@string/autonomy"
         android:hint="@string/autonomy"
         android:inputType="numberDecimal"
-        android:autofillHints="@string/autonomy" />
+        android:theme="@style/theme.EditText" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
+        style="@style/textViewSubtitle"
         android:text="@string/km_Per_Liter" />
 
     <TextView
