--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
-    <color name="colorGray">#9e9e9e</color>
-    <color name="colorTextBlue">#2a295c</color>
+    <color name="gray">#757575</color>
 
 </resources>
