--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,12 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="BlueEditText" parent="Theme.GastoViagem">
-        <item name="android:colorAccent">@color/purple_700</item>
-        <item name="colorControlHighlight">@color/purple_700</item>
-        <item name="colorControlNormal">@color/purple_700</item>
-        <item name="colorControlActivated">@color/purple_700</item>
+    <style name="theme.EditText" parent="Theme.GastoViagem">
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="colorControlNormal">@color/gray</item>
+        <item name="colorControlActivated">@color/purple_500</item>
     </style>
-
-
 </resources>
